New songs blog & links

--- a/m4d/Views/Home/Index.cshtml
+++ b/m4d/Views/Home/Index.cshtml
@@ -156,7 +156,7 @@
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs to dance a specific dance style.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dance") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-styles-help/") @SmartLink.Posts("https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find the most recently added songs.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/sort?sortOrder=Modified") @SmartLink.Posts("https://www.music4dance.net/blog/how-do-i-find-the-latest-music-added-to-music4dance/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/newmusic?type=Created") @SmartLink.Posts("https://www.music4dance.net/blog/tag/new-music/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find out what dance styles can be danced to a song.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/song-list/") @SmartLink.Posts("https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Start with a musical genre (or other tags) and find songs to dance a particular style.</dt>
