Disable spotify player + (hopefully) final tweaks to updateallplaylists

--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -122,7 +122,8 @@
 
 
     <section id="spotify-player">
-        <iframe src="https://open.spotify.com/embed?uri=spotify:trackset:@Model.DanceName:@topSpotify" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        Spotify has deprecated the feature that we were using to display the player, we are working on a solution and hope to have a replacement working soon.
+        @*<iframe src="https://open.spotify.com/embed?uri=spotify:trackset:@Model.DanceName:@topSpotify" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>*@
     </section>
 
     <div>
