A couple of small fixes.

--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -61,7 +61,7 @@
         }
         @if (Model.Parent == null)
         {
-        <a href="#dance-styles" class="list-group-item">Dance Sytles</a>
+        <a href="#dance-styles" class="list-group-item">Dance Styles</a>
         }
         @if (Model.DanceLinks != null && Model.DanceLinks.Count > 0)
         {
