--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -162,8 +162,9 @@
                             <li><a href="https://www.music4dance.net/blog">Blog</a></li>
                             <li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>
                             <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                            <li><a href="https://www.music4dance.net/blog/reading-list/">Reading List</a></li>
                             <li>@Html.ActionLink("Site Map", "sitemap", "Home")</li>
-                            <li>@Html.ActionLink("Privacy Policy", "privacypolicy","Home")</li>
+                            <li>@Html.ActionLink("Privacy Policy", "privacypolicy", "Home")</li>
                             <li>@Html.ActionLink("Credits", "credits", "Home")</li>
                         </ul>
                     </li>
