Change purchase targets to open new tabs

--- a/m4d/Views/Shared/_PurchaseLinks.cshtml
+++ b/m4d/Views/Shared/_PurchaseLinks.cshtml
@@ -6,13 +6,14 @@
 
 @foreach (var link in Model)
 {
-    //var target = string.Empty;
-    //if (link.Target != null)
-    //{
-    //    target = "target='" + link.Target + "'";
-    //} @Html.Raw(target)
+    var target = string.Empty;
+    if (link.Target != null)
+    {
+        target = "target='" + link.Target + "'";
+    }
+    
     var image = useLogo ? link.Logo : link.Charm;
 
-    <a href='@link.Link'><img src='@Url.Content("~/Content/" + image)' alt='@link.AltText' /></a>
+    <a href='@link.Link' @Html.Raw(target)><img src='@Url.Content("~/Content/" + image)' alt='@link.AltText' /></a>
 }
 
