Small fixes for dance page

--- a/m4d/App_Code/DanceHelper.cshtml
+++ b/m4d/App_Code/DanceHelper.cshtml
@@ -100,5 +100,6 @@
         <li>SongCountExplicit = @stats.SongCountExplicit</li>
         <li>SongCountImplicit = @stats.SongCountImplicit</li>
         <li>MaxWeight = @stats.MaxWeight</li>
+        <li>HasLinks = @(stats.DanceLinks != null)</li>
     </ul>
 }
