--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -1,21 +1,24 @@
 ﻿<!DOCTYPE html>
 @{
     var help = "https://www.music4dance.net/blog/music4dance-help/";
-    if (@ViewData.ContainsKey("Help") && !string.IsNullOrWhiteSpace(ViewBag.Help))
+    if (ViewData.ContainsKey("Help") && !string.IsNullOrWhiteSpace(ViewBag.Help))
     {
         help = string.Format("https://www.music4dance.net/blog/music4dance-help/{0}/",ViewBag.Help);
     }
 }
 <html>
 <head>
-    <!-- Google Adsense Verifier -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-8181165353763371",
-            enable_page_level_ads: true
-        });
-    </script>
+    @if (!User.IsInRole("premium"))
+    {
+        <!-- Google Adsense Verifier -->
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-8181165353763371",
+                enable_page_level_ads: true
+            });
+        </script>
+    }
     <!-- TradeDoubler site verification 2516966 -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +27,7 @@
     {
         <meta name="description" content="@ViewBag.Description"/>
     }
-    @if (@ViewData.ContainsKey("Canonical"))
+    @if (ViewData.ContainsKey("Canonical"))
     {
         <link rel="canonical" href="@ViewBag.Canonical"/>
     }
@@ -43,23 +46,31 @@
     @Styles.Render("~/content/site.css")
     @RenderSection("styles", false)
     <script type="text/javascript">
-        var appInsights = window.appInsights || function(config) {
-            function r(config) {
-                t[config] = function() {
-                    var i = arguments;
-                    t.queue.push(function() { t[config].apply(t, i) })
+        var appInsights = window.appInsights ||
+            function(config) {
+                function r(config) {
+                    t[config] = function() {
+                        var i = arguments;
+                        t.queue.push(function() { t[config].apply(t, i) })
+                    }
                 }
-            }
 
-            var t = { config: config }, u = document, e = window, o = "script", s = u.createElement(o), i, f;
-            for (s.src = config.url || "//az416426.vo.msecnd.net/scripts/a/ai.0.js", u.getElementsByTagName(o)[0].parentNode.appendChild(s), t.cookie = u.cookie, t.queue = [], i = ["Event", "Exception", "Metric", "PageView", "Trace"]; i.length;)r("track" + i.pop());
-            return r("setAuthenticatedUserContext"), r("clearAuthenticatedUserContext"), config.disableExceptionTracking || (i = "onerror", r("_" + i), f = e[i], e[i] = function(config, r, u, e, o) {
-                var s = f && f(config, r, u, e, o);
-                return s !== !0 && t["_" + i](config, r, u, e, o), s
-            }), t
-        }({
-            instrumentationKey: "aada2f48-d93c-4778-a71f-7781952cc47b"
-        });
+                var t = { config: config }, u = document, e = window, o = "script", s = u.createElement(o), i, f;
+                for (s.src =
+                        config.url || "//az416426.vo.msecnd.net/scripts/a/ai.0.js",
+                    u.getElementsByTagName(o)[0].parentNode.appendChild(s), t.cookie = u.cookie, t.queue = [], i =
+                        ["Event", "Exception", "Metric", "PageView", "Trace"];
+                    i.length;
+                ) r("track" + i.pop());
+                return r("setAuthenticatedUserContext"), r("clearAuthenticatedUserContext"),
+                    config.disableExceptionTracking ||
+                    (i = "onerror", r("_" + i), f = e[i], e[i] = function(config, r, u, e, o) {
+                        var s = f && f(config, r, u, e, o);
+                        return s !== !0 && t["_" + i](config, r, u, e, o), s
+                    }), t
+            }({
+                instrumentationKey: "aada2f48-d93c-4778-a71f-7781952cc47b"
+            });
 
         window.appInsights = appInsights;
         appInsights.trackPageView();
@@ -71,9 +82,10 @@
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+            i[r] = i[r] ||
+                function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
             a = s.createElement(o),
                 m = s.getElementsByTagName(o)[0];
             a.async = 1;
@@ -85,24 +97,26 @@
         ga('send', 'pageview');
     </script>
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
-        window.addEventListener("load", function(){
-            window.cookieconsent.initialise({
-                "palette": {
-                    "popup": {
-                        "background": "#1d8a8a"
+        window.addEventListener("load",
+            function() {
+                window.cookieconsent.initialise({
+                    "palette": {
+                        "popup": {
+                            "background": "#1d8a8a"
+                        },
+                        "button": {
+                            "background": "#62ffaa"
+                        }
                     },
-                    "button": {
-                        "background": "#62ffaa"
+                    "theme": "classic",
+                    "content": {
+                        "href": "home/privacypolicy#GDPR"
                     }
-                },
-                "theme": "classic",
-                "content": {
-                    "href": "home/privacypolicy#GDPR"
-                }
-            })});
+                })
+            });
     </script>
 </head>
 <body>
