Defer ads until user clicks the cookie consent button (I think)

--- a/m4d/Views/Home/PrivacyPolicy.cshtml
+++ b/m4d/Views/Home/PrivacyPolicy.cshtml
@@ -46,7 +46,7 @@
 <h3>All visitors to music4dance.net:</h3>
 <ul>
     <li>We collect data and use cookies to improve your experience by measuring anonymized user data via Google Analytics.  Specifically we do not associate Google Analytics data with your music4dance.net account</li>
-    <li>We collect data and use cookies for ad personalization and measurement.  <b>Note:</b> For EU residents we are currently disabling personalized ads, however the generic add experience still uses cookies to manage the number of ads that are displayed.</li>
+    <li>We collect data and use cookies for ad personalization and measurement.  We do not start displaying ads until the cookie consent button is clicked.</li>
 </ul>
 
 <h3>music4dance.net Account Holders:</h3>
