--- a/m4d/Views/PlayList/Details.cshtml
+++ b/m4d/Views/PlayList/Details.cshtml
@@ -42,6 +42,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Created)
         </dt>
 
@@ -64,10 +80,8 @@
         <dd>
             @Html.DisplayFor(model => model.SongIds)
         </dd>
-
     </dl>
 
-    
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
