Impove how we handle multiple types of playlists

--- a/m4d/Views/PlayList/Delete.cshtml
+++ b/m4d/Views/PlayList/Delete.cshtml
@@ -28,19 +28,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Tags)
+            @Html.DisplayNameFor(model => model.Data1)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Tags)
+            @Html.DisplayFor(model => model.Data1)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SongIds)
+            @Html.DisplayNameFor(model => model.Data2)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SongIds)
+            @Html.DisplayFor(model => model.Data2)
         </dd>
 
     </dl>
