--- a/m4d/Views/PlayList/Details.cshtml
+++ b/m4d/Views/PlayList/Details.cshtml
@@ -34,11 +34,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Tags)
+            @Html.DisplayNameFor(model => model.Data1)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Tags)
+            @Html.DisplayFor(model => model.Data1)
         </dd>
 
         <dt>
@@ -74,11 +74,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SongIds)
+            @Html.DisplayNameFor(model => model.Data2)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SongIds)
+            @Html.DisplayFor(model => model.Data2)
         </dd>
     </dl>
 
