--- a/m4d/Views/PlayList/Edit.cshtml
+++ b/m4d/Views/PlayList/Edit.cshtml
@@ -42,10 +42,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Tags, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Data1, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Tags, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Tags, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Data1, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Data1, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -66,10 +66,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.SongIds, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Data2, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.SongIds, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SongIds, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Data2, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Data2, "", new { @class = "text-danger" })
         </div>
     </div>
 
