--- a/m4d/Views/PlayList/Index.cshtml
+++ b/m4d/Views/PlayList/Index.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayNameFor(model => model.Type)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Tags)
+            @Html.DisplayNameFor(model => model.Data1)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -61,7 +61,7 @@
             @Html.DisplayFor(modelItem => item.Type)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Tags)
+            @Html.DisplayFor(modelItem => item.Data1)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
@@ -83,7 +83,7 @@
             @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
             @Html.ActionLink("Details", "Details", new { id = item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            @if (item.Updated.HasValue && string.IsNullOrWhiteSpace(item.SongIds))
+            @if (item.Updated.HasValue && string.IsNullOrWhiteSpace(item.Data2))
             {
                 <span> | </span>
                 @Html.ActionLink("Restore", "Restore", new { id = item.Id })
