--- a/m4d/Views/PlayList/Index.cshtml
+++ b/m4d/Views/PlayList/Index.cshtml
@@ -1,54 +1,68 @@
-﻿@model IEnumerable<m4dModels.PlayList>
+﻿@model PlayListIndex
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = $"{Model.Type} PlayList Index";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<p>
-    @Html.ActionLink("Restore All", "RestoreAll")
-</p>
-<p>
-    @Html.ActionLink("Update All", "UpdateAll")
-</p>
+<div class="row">
+    <div class="col-sm-3">
+        <p>
+            @Html.ActionLink("Create New", "Create", new { Model.Type })
+        </p>
+        <p>
+            @Html.ActionLink("Restore All", "RestoreAll", new { Model.Type })
+        </p>
+        <p>
+            @Html.ActionLink("Update All", "UpdateAll", new { Model.Type })
+        </p>
+    </div>
+    <div class="col-sm-3">
+        @if (Model.Type != PlayListType.SongsFromSpotify)
+        {
+            <p>
+                @Html.ActionLink("SongsFromSpotify", "Index", new { Type = PlayListType.SongsFromSpotify })
+            </p>
+        }
+        @if (Model.Type != PlayListType.SpotifyFromSearch)
+        {
+            <p>
+                @Html.ActionLink("SpotifyFromSearch", "Index", new { Type = PlayListType.SpotifyFromSearch })
+            </p>
+        }
+    </div>
+    <div class="col-sm-3">
+        @if (Model.Type == PlayListType.SpotifyFromSearch)
+        {
+            <p>
+                @Html.ActionLink("Create Dance Playlists", "BulkCreate", new { Type = PlayListType.SpotifyFromSearch })
+            </p>
+        }
+    </div>
+</div>
 
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Data1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Updated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Deleted)
-        </th>
+        <th>Id</th>
+        <th>User</th>
+        <th>Name</th>
+        <th>Description</th>
+        @if (Model.HasData1)
+        {
+            <th>@Model.Data1Name</th>
+        }
+        @if (Model.HasData2)
+        {
+            <th>@Model.Data2Name</th>
+        }
+        <th>Created</th>
+        <th>Updated</th>
+        <th>Deleted</th>
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
+    @foreach (var item in Model.PlayLists)
     {
     <tr>
         <td>
@@ -61,14 +75,23 @@
             @Html.DisplayFor(modelItem => item.Type)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Data1)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
         </td>
+        @if (Model.HasData1)
+        {
+            <td>
+                @Html.DisplayFor(modelItem => item.Data1)
+            </td>
+        }
+        @if (Model.HasData2)
+        {
+            <td>
+                @Html.DisplayFor(modelItem => item.Data2)
+            </td>
+        }
         <td>
             @Html.DisplayFor(modelItem => item.Created)
         </td>
