Implement load/save all types of playlists

--- a/m4d/Views/PlayList/Index.cshtml
+++ b/m4d/Views/PlayList/Index.cshtml
@@ -46,6 +46,7 @@
     <tr>
         <th>Id</th>
         <th>User</th>
+        <th>Type</th>
         <th>Name</th>
         <th>Description</th>
         @if (Model.HasData1)
