--- a/m4d/Views/Home/Index.cshtml
+++ b/m4d/Views/Home/Index.cshtml
@@ -52,9 +52,6 @@
     };
 }
 
-<div id="banner" class="row col-md-12 hidden-xs hidden-sm hidden-md" style="background-color: #424242">
-    <div class="centeredImage"><img src="~/Content/Music4DanceBannerColor.png" alt="Shall we dance to music?" /></div>
-</div>
 <div id="danceCarousel" class="carousel slide row col-md-12" data-ride="carousel" style="padding-top: 10px; padding-bottom: 10px">
     <!-- Carousel indicators -->
     <ol id="danceCarouselIndicators" class="carousel-indicators">
@@ -104,6 +101,7 @@
                         <li><span class="glyphicon glyphicon-music" aria-hidden="true"></span><a href="https://www.music4dance.net/home/tempi">Check out our Tempo Matrix Tool</a></li>
                     }
                 </ul>
+                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
             </div>
             <div class="col-md-4 hidden-xs hidden-sm hidden-md">
                 <img src="~/Content/fun.png" alt="Fun Dancing" width="600" height="600" />
@@ -152,6 +150,7 @@
 
 <div id="music" class="row col-md-12">
     <h2 class="music"><img src="~/Content/music.png" alt="music" width="48" height="48"/>Music</h2>
+    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     <dl class="big-text">
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs to dance a specific dance style.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dance") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-styles-help/") @SmartLink.Posts("https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/")</dd>
