--- a/m4d/Views/Song/NewMusic.cshtml
+++ b/m4d/Views/Song/NewMusic.cshtml
@@ -11,6 +11,12 @@
 
 @Html.Partial("_SetupFilterScript")
 
+<ol class="breadcrumb">
+    <li><a href="/">Music4Dance</a></li>
+    <li><a href="/dances">Songs</a></li>
+    <li class="active">New Music</li>
+</ol>
+
 <H1>New Music</H1>
 
 <H2>
